--- a/_posts/2016-02-07-Lorem.md
+++ b/_posts/2016-02-07-Lorem.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Lorem Ipsum"
 category: testing
-disqus: disabled
+comments: true
 ---
 
 ### Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi cursus fringilla dui. Donec laoreet maximus elit. Mauris ullamcorper condimentum lobortis. Donec maximus, mi vitae iaculis placerat, ligula mi maximus lectus, ac varius mi nulla id neque. Quisque porta eros nisi, eu fringilla urna dictum vitae.
