--- a/_posts/2020-06-19-mean.md
+++ b/_posts/2020-06-19-mean.md
@@ -4,8 +4,8 @@ title: The discriminatory power of mean()
 author: Tim Williams
 excerpt: As scientists, we need to consider the value judgement implicit when we average data or results.
 date: 2020-06-19
-categories: research-practice
-comments: true
+<!-- categories: research-practice -->
+comments: false
 toc: false
 ---
 
