adding back the category

--- a/_posts/2020-06-19-mean.md
+++ b/_posts/2020-06-19-mean.md
@@ -4,7 +4,7 @@ title: The discriminatory power of mean()
 author: Tim Williams
 excerpt: As scientists, we need to consider the value judgement implicit when we average data or results.
 date: 2020-06-19
-<!-- categories: research-practice -->
+categories: posts
 comments: false
 toc: false
 ---
